build: make sure we build for JDK 8 (for now)